--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.jzx.main.Test</mainClass>
+                                    <mainClass>com.jzx.main.TransformDemo</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
